# slack-space-manager

./: README.md  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
slack_space_manager/docs/: index.rst
slack_space_manager/docs/_build/doctrees/: environment.pickle
slack_space_manager/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv
slack_space_manager/src/: main.py
src/: data.txt  main.py
