[tool.poetry]
name = "slack-space-manager"
version = "2.0.0"
description = "Slacek Space Manager"
authors = ["Gabriel Biudes"]
readme = "README.md"
packages = [{include = "slack_space_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
